# AgXc

./: .gitignore  README.md  pyproject.toml
.dev/doc/: demo_image-exposure_bands.nknc  dragon.full.nknc
.dev/implementations/luts/: build-VLog.py
.dev/implementations/nuke/: build.py
.dev/implementations/obs/: README.md
.dev/implementations/ocio/: README.md  build.py  generate-sRGB-LUT.py
.dev/luts/: AgXc.lut_gen.VLog.py
doc/sources/: demo_image-exposure_bands.nknc~  dragon.full.combined.afphoto  dragon.full.nknc
luts/: README.md
luts/VLog/: README.md  in-VLog.AgX_look1-BT2020.out-BT1886.cube  in-VLog.AgX_look1-BT2020.out-BT709.cube  in-VLog.AgX_look1-BT2020.out-sRGB.cube  in-VLog.AgX_look2-BT2020.out-sRGB.cube  in-VLog.AgX_look3-BT2020.out-sRGB.cube
luts/src/: AgXc.lut_gen.VLog.py
nuke/: AgXcDRT.nk  AgXcTonescale.nk  Agx-tonescale.blink  CHANGELOG.md  README.md
nuke/src/: README.md  build.py
nuke/src/AgXcDRT/: AgXcDRT-template.nk
obs/: README.md
obs/doc/: DEV.md
obs/obs-script/: AgX.hlsl  AgX.lua  colorspace.hlsl  lib_agx.hlsl  lib_colorscience.hlsl  lib_grading.hlsl  lib_math.hlsl  obsui.lua
obs/obs-script/_lib_colorscience/: cctf.hlsl  (+4 more)
ocio/: CHANGELOG.md  README.md  config.ocio
ocio/AgXc-v0.2.5_default_OCIO-v1/: config.ocio
ocio/AgXc-v0.2.5_default_OCIO-v2/: config.ocio
ocio/AgXc_default_OCIO-v1/: config.ocio
ocio/AgXc_default_OCIO-v2/: config.ocio
python/: README.md
python/AgXLib/: __init__.py  _types.py  apply.py  cctf.py  grading.py  reshape.py  tonescale.py
python/tests/: test_apply.py  test_cctf.py  test_tonescale.py
(+25 files in other folders)
