[tool.poetry]
name = "AgXc"
version = "0.11.4"
description = "Fork of Troy.S AgX, a display rendering transform available via OCIO and more."
authors = ["Liam Collod <monsieurlixm@gmail.com>"]
readme = "README.md"
packages = [
    { include = "AgXLib", from = "python" },
    { include = "obs_codegen", from = ".dev/obs/python" },
]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
colour-science = { git = "https://github.com/colour-science/colour.git", tag = "v0.4.3" }
numpy = "*"
opencolorio = "2.1.*"

[tool.poetry.group.dev.dependencies]
black = "*"
pytest = "*"
types-nuke = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
